--- a/client/src/pages/PlanPage/styles.css
+++ b/client/src/pages/PlanPage/styles.css
@@ -25,3 +25,19 @@
 .titleTextField:hover {
   background-color: #9e9694; /* Change background on hover */
 }
+
+.container {
+  background-color: #f5efe6;
+  border-radius: 8px;
+  border: 1px solid #e8dfca;
+  height: "100vh";
+  width: "100%";
+  overflow: hidden;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
